--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,8 @@ header{
 .btn-primary{
   @apply px-7 py-2 bg-brandPrimary text-white rounded hover:bg-neutralDGrey transition-all duration-300 
   hover:-translate-y-4;
+  background: red;
+  
 }
 .company{
   width: 50px;
