--- a/src/App.css
+++ b/src/App.css
@@ -128,8 +128,14 @@ p {
   font-size: 16px;
   color: #666;
 }
+
 .reach-out{
   margin-top: 100px !important;
+}
+
+.contact-form input,
+.contact-form textarea {
+  border: none;
 }
 
 
